--- a/src/main/java/com/sistema/gerenciador/clube/view/LoginView.form
+++ b/src/main/java/com/sistema/gerenciador/clube/view/LoginView.form
@@ -65,8 +65,8 @@
                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                           <Component id="jPEntrar" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jTextField21" max="32767" attributes="0"/>
-                              <Component id="jTextField24" min="-2" pref="364" max="-2" attributes="0"/>
+                              <Component id="jTLogin" max="32767" attributes="0"/>
+                              <Component id="jTSenha" min="-2" pref="364" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -91,11 +91,11 @@
                   <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="jTextField21" min="-2" pref="45" max="-2" attributes="0"/>
+                  <Component id="jTLogin" min="-2" pref="45" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jTextField24" min="-2" pref="45" max="-2" attributes="0"/>
+                  <Component id="jTSenha" min="-2" pref="45" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jPEntrar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="151" max="-2" attributes="0"/>
@@ -155,7 +155,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField21">
+        <Component class="javax.swing.JTextField" name="jTLogin">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="39" green="39" red="3b" type="rgb"/>
@@ -175,7 +175,7 @@
             <Property name="opaque" type="boolean" value="true"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField24">
+        <Component class="javax.swing.JTextField" name="jTSenha">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="39" green="39" red="3b" type="rgb"/>
@@ -191,7 +191,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField24ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTSenhaActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPEntrar">
