--- a/src/main/java/com/sistema/gerenciador/clube/view/MenuView.form
+++ b/src/main/java/com/sistema/gerenciador/clube/view/MenuView.form
@@ -146,6 +146,9 @@
                 </Property>
                 <Property name="iconTextGap" type="int" value="10"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel9MouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
